--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 			<div class="tab-right">Многостраничник</div>
 		</div>
 		<div class="blocks" id="blocks-block">
-			<div class="blocks-title">Количество блоков</div>
+			<div class="blocks-title fade">Количество блоков</div>
 			<input type="number" class="counter" id="counter-block">
 		</div>
 		<div class="blocks" id="pages-block">
-			<div class="blocks-title">Количество страниц</div>
+			<div class="blocks-title fade">Количество страниц</div>
 			<input type="number" class="counter" id="counter-pages">
 		</div>
 		<div class="blocks">
-			<div class="blocks-title">Сколько часов проект</div>
+			<div class="blocks-title fade">Сколько часов проект</div>
 			<input type="number" class="counter" id="counter-hours">
 		</div>
 		<div class="blocks">
-			<div class="blocks-title">Стоимость вашего часа</div>
+			<div class="blocks-title fade">Стоимость вашего часа</div>
 			<input type="number" class="counter" id="counter-rate">
 		</div>
 		<div class="addiction">
